--- a/pages/landing.html
+++ b/pages/landing.html
@@ -40,9 +40,18 @@
                         <div class="input-group-addon"><i class="glyphicon glyphicon-barcode"></i></div>
                         <input type="text" class="form-control" id="exampleInputAmount" placeholder="Nomor Rekening Bank">
                     </div>
+                    <br>
+                    <div class="input-group">
+                        <input type="submit" class="btn btn-success" value="Proses!">
+                    </div>
                 </form>
             </div>
-            <div class="panel-footer">Hasil</div>
+            <div class="panel-footer" style="text-align: justify;">
+                Donasi yang anda berikan kepada kami, akan kami salurkan kembali kepada 
+                pengurus masjid / musholah / yayasan yang membutuhkan secara prioritas. 
+                Kami memiliki data-datanya dan kami telah membuat prioritas kebutuhan 
+                terhadap penerima itu sendiri. <a href="">Lebih lanjut..</a>
+            </div>
         </div>
     </div>
 
@@ -76,6 +85,45 @@
                 <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
                 <span class="sr-only">Next</span>
             </a>
+        </div>
+
+        <div class="col-md-12" style="margin-top: 20px; padding: 0px;">
+            <div class="row">
+
+                <a href="">
+                    <div class="col-md-4">
+                        <div class="panel panel-info">
+                            <div class="panel-heading">Masjid Lainnya</div>
+                            <div class="panel-body">
+                                <img src="images/masjid.jpg" class="img img-responsive">
+                            </div>
+                        </div>
+                    </div>
+                </a>
+
+                <a href="">
+                    <div class="col-md-4">
+                        <div class="panel panel-info">
+                            <div class="panel-heading">Musholah Lainnya</div>
+                            <div class="panel-body">
+                                <img src="images/musholah.jpg" class="img img-responsive">
+                            </div>
+                        </div>
+                    </div>
+                </a>
+
+                <a href="">
+                    <div class="col-md-4">
+                        <div class="panel panel-info">
+                            <div class="panel-heading">Yayasan Lainnya</div>
+                            <div class="panel-body">
+                                <img src="images/yayasan.jpg" class="img img-responsive">
+                            </div>
+                        </div>
+                    </div>
+                </a>
+
+            </div>
         </div>
         <h1 style="height: 1000px">sas</h1>
     </div>
