--- a/pages/masjid.html
+++ b/pages/masjid.html
@@ -1,46 +1,34 @@
 <div class="container">
 
     <div class="col-md-8">
-        <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-            <!-- Indicators -->
-            <ol class="carousel-indicators">
-                <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-                <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-                <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-            </ol>
 
-            <!-- Wrapper for slides -->
-            <div class="carousel-inner" role="listbox">
-                <div class="item active" style="height: 400px">
-                      <img src="images/no_img.jpg" alt="..." class="img img-responsive" width="100%">
-                      <div class="carousel-caption">caption</div>
-                </div>
-                <div class="item" style="height: 400px">
-                       <img src="images/masjid2.jpg" alt="..." class="img img-responsive" width="100%">
-                      <div class="carousel-caption">caption 2</div>
-                </div>
-            </div>
-
-            <!-- Controls -->
-            <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-            </a>
-        </div>
-
-        <div class="col-md-12" style="margin-top: 20px; padding: 0px;">
+        <div class="col-md-12" style="padding: 0px;">
             <div class="row">
 
                 <a href="">
                     <div class="col-md-4">
                         <div class="panel panel-info">
-                            <div class="panel-heading">Masjid Lainnya</div>
+                            <div class="panel-heading">Masjid Al-Ikhlas</div>
                             <div class="panel-body">
                                 <img src="images/masjid.jpg" class="img img-responsive">
+                                <table class="table">
+                                    <tr>
+                                        <td>Alamat</td>
+                                        <td>Jl.Pdk Cabe Ilir</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Kelurahan</td>
+                                        <td>Pdk Cabe Ilir</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Kecamatan</td>
+                                        <td>Pamulang</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Kota</td>
+                                        <td>Tangerang Selatan</td>
+                                    </tr>
+                                </table>
                             </div>
                         </div>
                     </div>
@@ -49,9 +37,27 @@
                 <a href="">
                     <div class="col-md-4">
                         <div class="panel panel-info">
-                            <div class="panel-heading">Musholah Lainnya</div>
+                            <div class="panel-heading">Masjid Al-Ikhlas</div>
                             <div class="panel-body">
-                                <img src="images/musholah.jpg" class="img img-responsive">
+                                <img src="images/masjid.jpg" class="img img-responsive">
+                                <table class="table">
+                                    <tr>
+                                        <td>Alamat</td>
+                                        <td>Jl.Pdk Cabe Ilir</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Kelurahan</td>
+                                        <td>Pdk Cabe Ilir</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Kecamatan</td>
+                                        <td>Pamulang</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Kota</td>
+                                        <td>Tangerang Selatan</td>
+                                    </tr>
+                                </table>
                             </div>
                         </div>
                     </div>
@@ -60,9 +66,27 @@
                 <a href="">
                     <div class="col-md-4">
                         <div class="panel panel-info">
-                            <div class="panel-heading">Yayasan Lainnya</div>
+                            <div class="panel-heading">Masjid Al-Ikhlas</div>
                             <div class="panel-body">
-                                <img src="images/yayasan.jpg" class="img img-responsive">
+                                <img src="images/masjid.jpg" class="img img-responsive">
+                                <table class="table">
+                                    <tr>
+                                        <td>Alamat</td>
+                                        <td>Jl.Pdk Cabe Ilir</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Kelurahan</td>
+                                        <td>Pdk Cabe Ilir</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Kecamatan</td>
+                                        <td>Pamulang</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Kota</td>
+                                        <td>Tangerang Selatan</td>
+                                    </tr>
+                                </table>
                             </div>
                         </div>
                     </div>
@@ -70,7 +94,7 @@
 
             </div>
         </div>
-        <h1 style="height: 1000px">Index</h1>
+        <h1 style="height: 1000px">Masjid</h1>
     </div>
 
     <div class="col-md-4">
