--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </head>
 <body style="background-color: #d4d4d4">
 
-    <nav ng-hide="currentPath === '/admin-login'" class="navbar navbar-default navbar-fixed-top" style="font-weight: bold;" ng-controller="NavClass">
+    <nav ng-hide="currentPath === '/admin-login' || currentPath === '/admin-register'" class="navbar navbar-default navbar-fixed-top" style="font-weight: bold;" ng-controller="NavClass">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
