--- a/pages-admin/login.html
+++ b/pages-admin/login.html
@@ -1,4 +1,4 @@
-<div class="container">
+<!-- <div class="container">
   <div class="row">
     <div class="col-md-6 col-md-offset-3">
       <div class="panel panel-default" style="border-radius:15px; box-shadow: 9px 9px 37px -5px rgba(0,0,0,0.33);">
@@ -36,4 +36,127 @@
       </div>
     </div>
   </div>
+</div> -->
+
+<style media="screen">
+body {
+background: #456;
+font-family: 'Open Sans', sans-serif;
+}
+
+.login {
+width: 400px;
+margin: 16px auto;
+font-size: 16px;
+}
+
+/* Reset top and bottom margins from certain elements */
+.login-header,
+.login p {
+margin-top: 0;
+margin-bottom: 0;
+}
+
+/* The triangle form is achieved by a CSS hack */
+.login-triangle {
+width: 0;
+margin-right: auto;
+margin-left: auto;
+border: 12px solid transparent;
+border-bottom-color: #28d;
+}
+
+.login-header {
+background: #28d;
+padding: 20px;
+font-size: 1.4em;
+font-weight: normal;
+text-align: center;
+text-transform: uppercase;
+color: #fff;
+}
+
+.login-container {
+background: #ebebeb;
+padding: 12px;
+}
+
+/* Every row inside .login-container is defined with p tags */
+.login p {
+padding: 12px;
+}
+
+.login input {
+box-sizing: border-box;
+display: block;
+width: 100%;
+border-width: 1px;
+border-style: solid;
+padding: 16px;
+outline: 0;
+font-family: inherit;
+font-size: 0.95em;
+}
+
+.input {
+box-sizing: border-box;
+display: block;
+width: 100%;
+border-width: 1px;
+border-style: solid;
+padding: 16px;
+outline: 0;
+font-family: inherit;
+font-size: 0.95em;
+background: #fff;
+border-color: #bbb;
+color: #555;
+background: #28d;
+border-color: transparent;
+color: #fff;
+cursor: pointer;
+}
+
+.login input[type="email"],
+.login input[type="password"] {
+background: #fff;
+border-color: #bbb;
+color: #555;
+}
+
+/* Text fields' focus effect */
+.login input[type="email"]:focus,
+.login input[type="password"]:focus {
+border-color: #888;
+}
+
+.login input[type="submit"] {
+background: #28d;
+border-color: transparent;
+color: #fff;
+cursor: pointer;
+}
+
+.login input[type="submit"]:hover {
+background: #17c;
+}
+
+/* Buttons' focus effect */
+.login input[type="submit"]:focus {
+border-color: #05a;
+}
+</style>
+
+
+<div class="login">
+  <div class="login-triangle"></div>
+
+  <h2 class="login-header">Log in</h2>
+
+  <form class="login-container" ng-controller="adminController" name="loginFrm">
+    <p><input required type="email" id="inputEmail" placeholder="Email" ng-model="email"></p>
+    <p><input required type="password" id="inputPassword" placeholder="Password" ng-model="password"></p>
+    <p><button class="input" ng-disabled="loginFrm.$invalid" ng-click="loginAdmin()"><i class="glyphicon glyphicon-log-in"></i> Login</button></p>
+    <p style="text-align:center"><a href="#/admin-register"><i class="glyphicon glyphicon-edit"></i> Register</a></p>
+  </form>
 </div>
