--- a/pages-admin/register.html
+++ b/pages-admin/register.html
@@ -1,47 +1,7 @@
-<!-- <div class="container">
-  <div class="row">
-    <div class="col-md-10 col-md-offset-1">
-      <div class="panel panel-default">
-        <div class="panel-heading" style="font-weight:bold;font-size:16px;text-align:center;background-color:#fff;">
-          Register User
-        </div>
-
-        <div class="panel-body">
-          <div class="col-md-12">
-            <form class="form-horizontal" action="" method="post">
-
-              <div class="form-group">
-                <label for="levelUser" class="col-md-2 control-label">Level</label>
-                <label for="levelUser" class="col-md-2 control-label">:</label>
-                <div class="col-md-6">
-                  <select class="form-control" id="levelUser" name="levelUser">
-                    <option>1</option>
-                    <option>2</option>
-                    <option>3</option>
-                    <option>4</option>
-                    <option>5</option>
-                  </select>
-                </div>
-              </div>
-
-              <div class="form-group">
-                <label for="levelUser" class="col-md-2 control-label">Nama</label>
-                <label for="levelUser" class="col-md-2 control-label">:</label>
-                <div class="col-md-6">
-                  <input type="text" name="namaUser" value="" class="form-control">
-                </div>
-              </div>
-            </div>
-          </form>
-        </div>
-      </div>
-    </div>
-  </div>
-</div> -->
-
-<div class="containerCMS">
-  <div class="container">
+<!-- <div class="containerCMS">
+  <div class="container" style="padding: 10px 0 35px 0;">
     <div class="col-md-12">
+
       <div class="titleCMS">
         REGISTER
       </div>
@@ -50,38 +10,176 @@
       <div class="col-md-12">
         <form class="form-horizontal" action="" method="post">
           <div class="form-group">
-            <label for="levelUser" class="col-md-2 control-label">Level</label>
-            <label for="levelUser" class="col-md-2 control-label">:</label>
+            <label for="levelUser" class="col-md-2 control-label" style="text-align:center;">Level</label>
+            <label for="levelUser" class="col-md-1 control-label">:</label>
             <div class="col-md-6">
               <select class="form-control" id="levelUser" name="levelUser">
-                <option>1</option>
-                <option>2</option>
-                <option>3</option>
+                <option>-- Pilih Level User --</option>
+                <option>Super Admin</option>
+                <option>Pengurus Masjid</option>
               </select>
             </div>
           </div>
 
           <div class="form-group">
-            <label for="namaUser" class="col-md-2 control-label">Nama</label>
-            <label for="namaUser" class="col-md-2 control-label">:</label>
+            <label for="namaUser" class="col-md-2 control-label" style="text-align:center;">Nama</label>
+            <label for="namaUser" class="col-md-1 control-label">:</label>
             <div class="col-md-6">
               <input type="text" name="namaUser" value="" class="form-control">
             </div>
           </div>
 
-        <div class="form-group">
-          <label for="emailUser" class="col-md-2 control-label">Email</label>
-          <label for="emailUser" class="col-md-2 control-label">:</label>
-          <div class="col-md-6">
-            <input type="email" name="emailUser" value="" class="form-control">
+          <div class="form-group">
+            <label for="emailUser" class="col-md-2 control-label" style="text-align:center;">Email</label>
+            <label for="emailUser" class="col-md-1 control-label">:</label>
+            <div class="col-md-6">
+              <input type="email" name="emailUser" value="" class="form-control">
+            </div>
           </div>
-        </div>
+
+          <div class="form-group">
+            <label for="bankUser" class="col-md-2 control-label" style="text-align:center;">Bank</label>
+            <label for="bankUser" class="col-md-1 control-label">:</label>
+            <div class="col-md-6">
+              <select class="form-control" id="bankUser" name="bankUser">
+                <option>-- Pilih Bank --</option>
+                <option>BCA</option>
+                <option>BNI</option>
+              </select>
+            </div>
+          </div>
+
+          <div class="form-group">
+            <label for="rekeningUser" class="col-md-2 control-label" style="text-align:center;">No. Rekening</label>
+            <label for="rekeningUser" class="col-md-1 control-label">:</label>
+            <div class="col-md-6">
+              <input type="number" name="rekeningUser" value="" class="form-control">
+            </div>
+          </div>
+
+          <div class="form-group">
+            <label for="namarekeningUser" class="col-md-2 control-label" style="text-align:center;">Atas Nama</label>
+            <label for="namarekeningUser" class="col-md-1 control-label">:</label>
+            <div class="col-md-6">
+              <input type="text" name="namarekeningUser" value="" class="form-control">
+            </div>
+          </div>
+
+          <div class="col-md-8 col-md-offset-3">
+            <button type="submit" class="btn btn-primary">
+              Simpan
+            </button>
+          </div>
+
+        </form>
       </div>
-    </form>
-
+    </div>
   </div>
+</div> -->
 
-  </div>
-</div>
-</div>
+
+<style media="screen">
+body {
+background: #456;
+font-family: 'Open Sans', sans-serif;
+}
+
+.login {
+width: 400px;
+margin: 16px auto;
+font-size: 16px;
+}
+
+/* Reset top and bottom margins from certain elements */
+.login-header,
+.login p {
+margin-top: 0;
+margin-bottom: 0;
+}
+
+/* The triangle form is achieved by a CSS hack */
+.login-triangle {
+width: 0;
+margin-right: auto;
+margin-left: auto;
+border: 12px solid transparent;
+border-bottom-color: #28d;
+}
+
+.login-header {
+background: #28d;
+padding: 20px;
+font-size: 1.4em;
+font-weight: normal;
+text-align: center;
+text-transform: uppercase;
+color: #fff;
+}
+
+.login-container {
+background: #ebebeb;
+padding: 12px;
+}
+
+/* Every row inside .login-container is defined with p tags */
+.login p {
+padding: 12px;
+}
+
+.login input {
+box-sizing: border-box;
+display: block;
+width: 100%;
+border-width: 1px;
+border-style: solid;
+padding: 16px;
+outline: 0;
+font-family: inherit;
+font-size: 0.95em;
+}
+
+.login input[type="email"],
+.login input[type="password"] {
+background: #fff;
+border-color: #bbb;
+color: #555;
+}
+
+/* Text fields' focus effect */
+.login input[type="email"]:focus,
+.login input[type="password"]:focus {
+border-color: #888;
+}
+
+.login input[type="submit"] {
+background: #28d;
+border-color: transparent;
+color: #fff;
+cursor: pointer;
+}
+
+.login input[type="submit"]:hover {
+background: #17c;
+}
+
+/* Buttons' focus effect */
+.login input[type="submit"]:focus {
+border-color: #05a;
+}
+</style>
+
+
+<div class="login">
+  <div class="login-triangle"></div>
+
+  <h2 class="login-header">Registrasi</h2>
+
+  <form class="login-container">
+    <p><input type="text" placeholder="Nama Anda" required=""></p>
+    <p><input type="text" placeholder="No. Telpon" required=""></p>
+    <p><input type="text" placeholder="Email Aktif" required=""></p>
+    <!-- <p><input type="text" id="kelahiran" placeholder="Tanggal Lahir"></p> -->
+    <p><input type="submit" value="Register"></p>
+    <p style="text-align:center"><a href="#/admin-login"><i class="glyphicon glyphicon-log-in"></i> Login</a></p>
+  </form>
 </div>
